force-app/main/default/objects/HDT_GenericDataEnrichmentTranscode__mdt/HDT_GenericDataEnrichmentTranscode__mdt.object-meta.xml
<CustomObject>
    <label>Generic Transcodifica Arricchimento Dati</label>
    <pluralLabel>Generic Transcodifica Arricchimento Dati</pluralLabel>
</CustomObject>