force-app/main/default/objects/HDT_GenericDataEnrichmentTranscode__mdt/fields/CommodityField__c.field-meta.xml
<CustomField>
    <fullName>CommodityField__c</fullName>
    <label>Campo Servizio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>