force-app/main/default/objects/HDT_GenericDataEnrichmentTranscode__mdt/fields/IsNumber__c.field-meta.xml
<CustomField>
    <fullName>IsNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Numero</label>
    <type>Checkbox</type>
</CustomField>