force-app/main/default/objects/HDT_GenericDataEnrichmentTranscode__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>Nome Oggetto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>