force-app/main/default/objects/HDT_GenericDataEnrichmentTranscode__mdt/fields/SapField__c.field-meta.xml
<CustomField>
    <fullName>SapField__c</fullName>
    <label>Campo SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>