force-app/main/default/objects/HDT_GenericDataEnrichmentTranscode__mdt/listViews/HDT_DataEnrichmentTranscode.listView-meta.xml
<ListView>
    <fullName>HDT_DataEnrichmentTranscode</fullName>
    <columns>ObjectName__c</columns>
    <columns>CommodityField__c</columns>
    <columns>Commodity__c</columns>
    <columns>SapField__c</columns>
    <columns>SfdcField__c</columns>
    <columns>Method__c</columns>
    <columns>IsNumber__c</columns>
    <columns>Precision__c</columns>
    <filterScope>Everything</filterScope>
    <label>Transcodifica Arricchimento Dati</label>
    <language>en_US</language>
</ListView>